--- a/RPTemplate.html
+++ b/RPTemplate.html
@@ -4,14 +4,14 @@
 	<head> 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-		<title> Template</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-		<link rel="stylesheet" type = "text/css" href="CSS/RPCSS.css">
+		<title> Template</title> <!-- Add Title Here -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins"> <!-- This is the link to where I got the font from. -->
+		<link rel="stylesheet" type = "text/css" href="CSS/RPCSS.css"> <!-- Use this to link this page to a CSS file. -->
 	</head>
 
 	<body>
-	<div class="navbar">
-			<a href="RPHome.html"> Home</a>
+	<div class="navbar"> <!-- This is the Horizontal Navigation bar. The class in the div element is connected to the style and visual code from the CSS file. -->
+			<a href="RPHome.html"> Home</a> <!-- Links in the Navigation Bar -->
 			<a href="RPTemplate.html"> Topic</a>
 			<a href="RPResearch.html">Research</a>
 			<a href="RPData.html">Data</a>
@@ -22,16 +22,16 @@
 			<a href="RPTemplate.html">Professionalization</a>
 	</div>
 	
-	<div class="chunk">
-		<h1> Heading 1</h1>
+	<div class="chunk"> <!-- All mainbody content is in this div element. -->
+		<h1> Heading 1</h1> <!-- Use the hierarchy of headings to separate your work based on topic. -->
 		<h2> Heading 2</h2>
 		<h3> Heading 3</h3>
 		
-		<aside>
-			<p>SIDEBAR</p>
+		<aside> <!-- This is the element that gives us a visual sidebar. Add information in here that can assist the user as they read along. -->
+			<p>SIDEBAR</p> <!-- You can add a paragraph or even a list -->
 		</aside>
-		<p>This <i>is</i> a <strong>paragraph</strong>.</p>
-		<p><ol>
+		<p>This <i>is</i> a <strong>paragraph</strong>.</p> <!-- This is the paragraph element. Use the strong and i elements responsibly and do not over emphasize throughout the module. -->
+		<p><ol> <!-- You can have two types of list. Use CSS to edit the appearance of bullet points. -->
 			<li>Ordered List</li>
 			<li>Ordered List</li>
 			<li>Ordered List</li>
@@ -43,12 +43,12 @@
 			<li>Unordered List</li>
 		</ul>
 		
-		<p><figure>
+		<p><figure> <!-- Add images here with a caption. Edit the size of the image using the width element below.-->
 				<img alt="" src="Images/classic.gif" style="width:66%">  
 				<figcaption>The caption goes here</figcaption>
 		</figure>
 		
-		<p><a href="https://www.google.com/">Link (Example: Google)</a></p>
+		<p><a href="https://www.google.com/">Link (Example: Google)</a></p> <!-- This is the common way to include links in a webpage. Don't forget to add a file path for images from your desktop. -->
 	</div>
 	
 		
